# ai-trading-bot-dred

./: .gitignore  docker-compose.yaml  pyproject.toml  runner.py
app/: bot.py  config.py  menu.py
app/filters/: admin.py
app/handlers/: basic.py  menu.py
app/handlers/admin/: basic.py  generate_key.py
app/keyboards/: admin.py  user.py
app/middlewares/: db_middleware.py
app/services/scheduler/: job_serializer.py  run_worker.py
app/services/scheduler/tasks/: message.py
app/sql/: db.py
app/sql/models/: __init__.py  base.py  key.py  user.py
app/sql/repo/: __init__.py  key.py  user.py
app/states/: admin.py  user.py
app/utils/: cli.py  generate_random_key.py  redis.py
assets/: welcome_image
assets/comissions/: comission1000  comission150  comission80
migrations/: env.py
migrations/versions/: 2b3675659424_init.py  c1a2b3d4e5f6_add_amount_to_users.py  d2b3c4d5e6f7_add_session_used_to_users.py  e3c4d5e6f7a8_add_account_id_to_users.py
