[project]
name = "ai-trading-bot-dred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.1",
    "alembic>=1.18.5",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "click>=8.4.2",
    "orjson>=3.11.9",
    "pydantic-settings>=2.14.2",
    "pytz>=2026.2",
    "sqlalchemy>=2.0.51",
    "uuid-utils>=0.16.2",
]
